# SpiceXplorer

./: .gitignore  .gitmodules  README.md  pyproject.toml
example/: dev.py
examples/: nevergrad_reference_configurable_families.yaml  nevergrad_reference_registry.yaml
examples/OTA/5t-ota/: readme.md
examples/OTA/5t-ota/ihp-sg13g2/sizing/: 5t_ota_sizing_with_multi_spec_constraint_sat_nevergrad.ipynb  project_setup.yaml  test_load_optimization_trace.ipynb  test_nevergrad_single_obj.ipynb
examples/OTA/cascode/: readme.md
examples/OTA/cascode/NEWCAS_SUBMISSION_APPENDIX/: CASCODE-OTA_LogBFGSCMAPlus_2026-02-08_00-01-55_BFGS_relativeAbs-loss.csv  draw.ipynb  draw.py  scores_CASCODE-OTA_LHSSearch_2026-02-07_10-53-21_blind-search_sigmoid-loss.csv
examples/OTA/folded_cascode/: README.md
examples/folded_cascode/: nevergrad_single_obj.ipynb
examples/folded_cascode/sizing/: project_setup.yaml
scripts/: cleanup_log.sh
src/spicexplorer/core/: __init__.py  domains.py  utils.py
src/spicexplorer/demo/: nevergrad_registry_reference.yaml
src/spicexplorer/designer_tools/: __init__.py  domains.py  utils.py  visualizer.py
src/spicexplorer/logging/: __init__.py  logger_setup.py
src/spicexplorer/optimization/: __init__.py  base.py  bayesian_ax.py  legacy.py  nevergrad.py  orchestrator.py  symbolic.py
src/spicexplorer/optimization/rl/: __init__.py  agent_factory.py  agent_trainer.py  base.py  circuit_env.py  ddpg.py  hyperparameters.py  replay_buffer.py  rl_factory.py  rl_optimizer.py
src/spicexplorer/optimization/rl_agents/: __init__.py  base.py  ddpg.py  models.py  replay_buffer.py  utils.py
src/spicexplorer/optimization/stochastic/: bayesian_ax.py  nevergrad.py  symbolic.py
src/spicexplorer/spice_engine/: __init__.py  spicelib.py  storage.py
src/spicexplorer/viz/: __init__.py  plotting.py
tests/: ddpg_hyperparameters.yaml  test_hyperparameters.py  test_rl_factory.py
(+53 files in other folders)
