[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SpiceXplorer"
version = "0.1.0"
description = "A Pythonic compilation of circuit optimization algorithms with OOP emphasis for accelerated EDA research"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Danial, Noori Zadeh", email = "noorizad@mcmaster.com"}
]
requires-python = ">=3.10"
dependencies = [
    "control>=0.10",
    "dacite>=1.9",
    "nevergrad>=1.0",
    "numpy>=2.2",
    "pandas>=2.2.3",
    "plotly>=6.0",
    "PyYAML>=6.0.1",
    "spicelib>=1.4",
    "sympy>=1.13.3",
    "torch>=2.6",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
ax = [
    "ax-platform>=1.2.4; python_version >= '3.11'",
]

# [project.scripts]
# run-symbolix = "spicexplorer.symbolic_solver.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spicexplorer"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/docs",
]
